--- a/client/.env.local
+++ b/client/.env.local
@@ -1,1 +1,3 @@
 NEXT_PUBLIC_API_BASE_URL=http://localhost:8000
+
+AUTH_SECRET="NnG+FPf49UbbPCvlb6pyFob4trgLd1KkL1qWd4aj8a8=" # Added by `npx auth`. Read more: https://cli.authjs.dev
