--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
+    "@hookform/resolvers": "^5.0.1",
     "@mui/material": "^7.0.2",
     "@mui/x-data-grid": "^7.28.3",
     "@reduxjs/toolkit": "^2.6.1",
@@ -18,6 +19,7 @@
     "dotenv": "^16.5.0",
     "lucide-react": "^0.487.0",
     "next": "15.3.0",
+    "next-auth": "^5.0.0-beta.27",
     "numeral": "^2.0.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
