--- a/client/.env.local
+++ b/client/.env.local
@@ -1,3 +1,3 @@
+NEXTAUTH_SECRET="h8ejMy5GwOVgkB6nnojXN4uAYAJpFflexKEIZuzrXEg=" # Added by `npx auth`. Read more: https://cli.authjs.dev
+AUTH_SECRET="8X/5Uw9sUxn8JbWp+drzStzGKCxQEyr9WYlaSDzp0Cw="
 NEXT_PUBLIC_API_BASE_URL=http://localhost:8000
-
-AUTH_SECRET="NnG+FPf49UbbPCvlb6pyFob4trgLd1KkL1qWd4aj8a8=" # Added by `npx auth`. Read more: https://cli.authjs.dev
