--- a/client/package.json
+++ b/client/package.json
@@ -26,6 +26,7 @@
     "react-redux": "^9.2.0",
     "recharts": "^2.15.2",
     "redux-persist": "^6.0.0",
+    "tailwindcss-animate": "^1.0.7",
     "uuid": "^11.1.0"
   },
   "devDependencies": {
