--- a/client/package.json
+++ b/client/package.json
@@ -14,8 +14,13 @@
     "@hookform/resolvers": "^5.0.1",
     "@mui/material": "^7.0.2",
     "@mui/x-data-grid": "^7.28.3",
+    "@radix-ui/react-label": "^2.1.6",
+    "@radix-ui/react-slot": "^1.2.2",
+    "@radix-ui/react-toast": "^1.2.13",
     "@reduxjs/toolkit": "^2.6.1",
     "axios": "^1.8.4",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "dotenv": "^16.5.0",
     "lucide-react": "^0.487.0",
     "next": "15.3.0",
@@ -23,11 +28,14 @@
     "numeral": "^2.0.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-hook-form": "^7.56.3",
     "react-redux": "^9.2.0",
     "recharts": "^2.15.2",
     "redux-persist": "^6.0.0",
+    "tailwind-merge": "^3.3.0",
     "tailwindcss-animate": "^1.0.7",
-    "uuid": "^11.1.0"
+    "uuid": "^11.1.0",
+    "zod": "^3.24.4"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
