--- a/server/package.json
+++ b/server/package.json
@@ -14,6 +14,7 @@
   "license": "ISC",
   "dependencies": {
     "@prisma/client": "^6.6.0",
+    "@types/multer": "^1.4.12",
     "bcryptjs": "^3.0.2",
     "body-parser": "^2.2.0",
     "concurrently": "^9.1.2",
@@ -23,6 +24,7 @@
     "helmet": "^8.1.0",
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
+    "multer": "^2.0.0",
     "prisma": "^6.6.0",
     "zod": "^3.24.3"
   },
